<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context="app.ciscoconfig.dk.ciscoconfigapp.GuidesActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guides_Guides"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <Button
            android:id="@+id/Btn_Guides_OsiModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guides_osi_model"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Btn_Guides_RouterModels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guides_Router_models"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Btn_Guides_SwitchModels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guides_switch_models"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Btn_Guides_RouterConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guides_router_config"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Btn_Guides_SwitchConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guides_Switch_Config"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Btn_Guides_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_google"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="10dp"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/Btn_Guides_BackToMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/all_back"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
